# oakridge

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  package.json  tsconfig.json
builder/: AGENTS.md  CLAUDE.md  pyproject.toml
builder/tests/: helpers.py  test_build_brief_review_responder.py  test_cli.py  test_handoff_render.py  test_plan_review_responder.py  test_planner2_validation.py  test_review_responder_base.py  test_review_responder_conflict_e2e.py  test_run_build_only_pipeline_retry_run.py  test_run_build_pipeline_result_boundary.py  test_tools_bash.py  test_tools_edit.py  test_tools_glob.py  test_tools_grep.py  test_tools_read.py  test_tools_write.py
legit-biz-club/: AGENTS.md  CLAUDE.md  README.md  package.json  pyproject.toml
legit-biz-club/scripts/: aggregate_v1_grid.py  generate_dashboard_metadata.py  run_one_project.py  run_v1_study.py
legit-biz-club/tests/: _helpers.py  test_composition.py  test_consensus.py  test_coordinator.py  test_disagreement.py  test_eval_code.py  test_eval_prose.py  test_integration_phase3.py  test_jig_proposer.py  test_kbbl_adapter.py  test_lifecycle.py  test_mediator.py  test_memory.py  test_models.py  test_project_coordinator.py  test_registry.py  test_round_budget.py  test_run.py  test_run_contract.py  test_study_conditions.py  test_study_layout.py  test_study_results.py  test_study_runner.py  test_study_targets.py  test_termination.py  test_v1_graders.py  test_v1_targets.py  test_version.py
oakridge-core/: Cargo.toml  README.md
oakridge-core/.sqlx/: query-04235aa30408c5ae132acd6f53481bd40d0571d53e032a0e02a70d996781cef8.json  query-183bbe62375fb94b00d67680cdfb8207d0b2188ca3df04afc3f620e78d7858b5.json  query-1cbd642ee8298c2f5cc9cefefb9f112dd8923844ac2b808bb3f192a8a35dc2f6.json  query-22b98919f573e6808a023f0cd89f6cf16d3b7dd7b4180369f7b0d88ef28435ce.json  query-268caa73a81fc6b8a676b9ab8fe15eba8e1b5208936f43930583961a2056c288.json  query-2e339c19171bd687096dc8edd16a59ee25b6343d811b90813f25330f3617bed1.json  query-3225532b597d301a35678741c1e80396487fa1291fb903c12ccdd8341fef2e38.json  query-3247c1364b79345c0f5651130c91fd4dcbc5f3d054d648cca451348bbb6c0d51.json  query-335ea0362ac37f2843d54507e75c3ec14bbb3c20ea4a66f82721ffbd83a12bcb.json  query-37e03966b5323c08a072bb9b2bb405293e3725f56cb197531e572155bf764918.json  query-3e1ff424da3adfdf7d0259cdf879abfdb19429f5cc5957035efa349b079254a2.json  query-3ed5ccc7e0c9e32da1400396b8bb211fb97f623aa56c5ff30d62841f7942aa57.json  query-4aec7ec0292049a08d6a908745d8690d4a7ba2ead1e421c7ec1bc7ab59a5dd93.json  query-4c4e0f824d3fb678bd8f4a15d788f4a6df5455d49574acbaf6ab03c13c245069.json  query-4c5f8a790c11850620c524826f9b0161ac11c88e7cc70760c8b2624fc3553286.json  query-4dc85da62d9c99be69cbb8fa51c30d0ae13654bb88d1080c2a00f33b65dbdb72.json  query-5d4985e68e6d667927e373c6e113697c55d9b66f80d32219ba73e25129b2567d.json  query-62897f3b16d238554e4e7f9f6d692a107eceb1ffdef851f805c3e7b567a3e340.json  query-6a935ab0fffa8ba8bb6056a7ffea709aa290b202abf3d47894f97363ff4fc499.json  query-6bcba4030dafaa0153803bf94fa11279d1b6908f5d30c02ea273b4d6c6e608a8.json  query-6f238d868938cf62cdba3862c0d2c33843374def9748dd7c342ae3bf67f3f3ee.json  query-711658c8ff42a7a6e6fe43b61a40f593c1711a822f4aa6c6a969353b6e266ee2.json  query-71c5208435705945f0d1e083254d67d172734cdc055f24de8abcc415554ac13e.json  query-78a2317e025a5e7e2c1cc08f20acbde7390b2a861decaf7d2002453d666d75ff.json  query-792809e344eb7afafdf05c895712f9ad7b266df72ff06633805321fdf9dac0be.json  query-7d35dc7122e465dcec6adbb491ee94e3d2097d5812ed1ffa177ffe534aa922d7.json  query-7eaf24022ebf61002f01fcab099003bfb2ca5a24463e623ec4064d31b02cc41d.json  query-896a8089841a67976df10c3c391e789fff3933814cd4118406bce1d9c5676b7b.json  query-8e1a2e551686ce335fec6a013377774e9d3df61ce0bcb56abc131bb71888efad.json  query-90b70f28ee8a2865f8b5cacd1e2a59ea496c81c5f021fcdc732a4af2f0559231.json  query-977e7ee8af00744594bd9ad74d1330e7dccaabc25abc378bf48baa14cbd0eb5e.json  query-98e95351d8c2897a07c9fdbcdb98e669c01b2fff1b7eb5c7cc95494ae752dbe0.json  query-9b34069ac175f96ceee1c70c9528093b7b55f66ad35b3704ab9f01a18c7a9dd0.json  query-a2b9376d38bbb6524dbc6e7b1d518c6ac472f1d15063cf7134a0a9406b951590.json  query-a818982273a2a62159e21512c088802c479c9c7fb4b6e6bcd7cea42af701e0ba.json  query-a85ff08d0fa8903a854c3d149fc444ff46220e5948da0b6f8ba6c1db3d191ebc.json  query-aa9be508c8373731a8a05094b3a17fd049b7bc9ed9fdef9be83464ec60b62160.json  query-b01be75f58a48a406e79e14c311490bb0a6df0d0f19fd30d8b03f36e3bb8a969.json  query-ba1381a5864d65a5683ee6beae7373b5ed1b3b80af92757c0909f7da2d44138a.json  query-c52aa24a046e283039e756af29ece35d6430d6879994fb981731c5d82d020fa5.json  (+5 more)
oakridge-core/docs/: runtime_delegation.md
oakridge-core/examples/: dev_flow.json  dev_flow_v2.json
oakridge-core/src/: config.rs  events.rs  lib.rs  main.rs  scheduler.rs  seed.rs  types.rs
oakridge-core/tests/: delegated_lbc_run_process.rs  delegated_lbc_run_smoke.rs  delegated_session_e2e.rs  dev_flow_workflow.rs  http_exposure.rs  multi_session_workflow.rs  opacity.rs  restart_recovery.rs  session_agent_e2e.rs  stuck_sweeper.rs
planner1/: CLAUDE.md  pyproject.toml
planner1/tests/: test_cli.py  test_staging.py  test_tools.py
safir-py/: AGENTS.md  CLAUDE.md  pyproject.toml
safir-py/tests/: test_client.py  (+1 more)
(+678 files in other folders)
