[project]
name = "builder"
version = "0.1.0"
description = "Planner-2 + build-agent jig pipeline: brief -> handoff -> PRs."
requires-python = ">=3.12"
dependencies = [
    "jig[anthropic]",
    "httpx>=0.27",
    "pydantic>=2.0",
    "safir-py",
]

[project.scripts]
safir-build = "builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/builder"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.uv.sources]
jig = { git = "https://github.com/rankonelabs/jig.git", rev = "8b110b494c665a93a033d7c4d628b6a27db08a4b" }
safir-py = { path = "../safir-py" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "jig.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
