[project]
name = "legit-biz-club"
version = "0.1.0"
description = "Multi-agent workspace layer of oakridge — bounded projects, three coordination modes, ensemble eval."
requires-python = ">=3.12"
dependencies = [
    "jig[anthropic,openai,ollama]",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legit_biz_club"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.uv.sources]
jig = { git = "https://github.com/rankonelabs/jig.git" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# jig doesn't ship a py.typed marker yet. Treat its public imports as
# untyped rather than failing strict mypy on every consumer.
module = "jig.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
