[project]
name = "planner1"
version = "0.1.0"
description = "Decomposes a safir task's notes into a DAG of build-ready child tasks via jig + LLM tool-loop."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "jig[anthropic]",
    "pydantic>=2.0",
    "safir-py",
]

[project.scripts]
safir-decompose = "planner1.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planner1"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.uv.sources]
jig = { git = "https://github.com/rankonelabs/jig.git", rev = "8b110b494c665a93a033d7c4d628b6a27db08a4b" }
safir-py = { path = "../safir-py" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "jig.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
